syntax = "proto3";

package events;

option go_package = "prometheus/internal/events/proto;eventspb";

import "google/protobuf/timestamp.proto";

// BaseEvent contains common fields for all events
message BaseEvent {
  string id = 1;
  string type = 2;
  google.protobuf.Timestamp timestamp = 3;
  string source = 4;
  string user_id = 5;
  string version = 6;
}

// AIUsageEvent tracks AI model usage (tokens, costs, latency)
message AIUsageEvent {
  BaseEvent base = 1;
  string session_id = 2;
  string agent_name = 3;
  string agent_type = 4;
  string provider = 5;       // anthropic, openai, google, deepseek
  string model_id = 6;       // claude-sonnet-4, gpt-4o, etc.
  string model_family = 7;   // claude-3.5, gpt-4o, etc.
  uint32 prompt_tokens = 8;
  uint32 completion_tokens = 9;
  uint32 total_tokens = 10;
  double input_cost_usd = 11;
  double output_cost_usd = 12;
  double total_cost_usd = 13;
  uint32 tool_calls_count = 14;
  bool is_cached = 15;
  bool cache_hit = 16;
  uint32 latency_ms = 17;
  uint32 reasoning_step = 18;
  string workflow_name = 19;
}

// OpportunityFoundEvent is published when a trading opportunity is detected
message OpportunityFoundEvent {
  BaseEvent base = 1;
  string symbol = 2;
  string exchange = 3;
  string direction = 4;  // "long" or "short"
  double confidence = 5; // 0.0 - 1.0
  double entry = 6;
  double stop_loss = 7;
  double take_profit = 8;
  string timeframe = 9;
  string strategy = 10;
  string reasoning = 11;
  map<string, string> indicators = 12;
}

// RegimeChangedEvent is published when market regime changes
message RegimeChangedEvent {
  BaseEvent base = 1;
  string symbol = 2;
  string old_regime = 3;
  string new_regime = 4;  // "trending", "ranging", "volatile"
  double confidence = 5;
  double volatility = 6;
  string trend = 7;  // "bullish", "bearish", "neutral"
}

// OrderPlacedEvent is published when an order is placed
message OrderPlacedEvent {
  BaseEvent base = 1;
  string order_id = 2;
  string symbol = 3;
  string exchange = 4;
  string side = 5;  // "buy" or "sell"
  string type = 6;  // "market", "limit", "stop"
  double price = 7;
  double amount = 8;
  string agent_id = 9;
  string strategy_id = 10;
}

// OrderFilledEvent is published when an order is filled
message OrderFilledEvent {
  BaseEvent base = 1;
  string order_id = 2;
  string symbol = 3;
  string exchange = 4;
  string side = 5;
  double filled_price = 6;
  double filled_amount = 7;
  double fee = 8;
  string fee_currency = 9;
}

// PositionOpenedEvent is published when a position is opened
message PositionOpenedEvent {
  BaseEvent base = 1;
  string position_id = 2;
  string symbol = 3;
  string exchange = 4;
  string side = 5;
  double entry_price = 6;
  double amount = 7;
  double leverage = 8;
  double stop_loss = 9;
  double take_profit = 10;
  string strategy_id = 11;
}

// PositionClosedEvent is published when a position is closed
message PositionClosedEvent {
  BaseEvent base = 1;
  string position_id = 2;
  string symbol = 3;
  string exchange = 4;
  string side = 5;
  double entry_price = 6;
  double exit_price = 7;
  double amount = 8;
  double pnl = 9;
  double pnl_percent = 10;
  int64 duration_seconds = 11;
  string close_reason = 12;  // "take_profit", "stop_loss", "manual", "timeout"
}

// CircuitBreakerTrippedEvent is published when circuit breaker is activated
message CircuitBreakerTrippedEvent {
  BaseEvent base = 1;
  string reason = 2;
  double current_loss = 3;
  double threshold = 4;
  double drawdown = 5;
  bool auto_resume = 6;
  google.protobuf.Timestamp resume_at = 7;
}

// AgentExecutedEvent is published after agent execution
message AgentExecutedEvent {
  BaseEvent base = 1;
  string agent_type = 2;
  string model = 3;
  int64 duration_ms = 4;
  int32 tokens_used = 5;
  double cost_usd = 6;
  bool success = 7;
  string error = 8;
  string decision = 9;
  double confidence = 10;
}

// DecisionMadeEvent is published when agent makes a decision
message DecisionMadeEvent {
  BaseEvent base = 1;
  string agent_type = 2;
  string decision = 3;
  string action = 4;  // "buy", "sell", "hold", "close"
  string symbol = 5;
  double confidence = 6;
  string reasoning = 7;
  map<string, string> context = 8;
}

// WorkerFailedEvent is published when a worker fails
message WorkerFailedEvent {
  BaseEvent base = 1;
  string worker_name = 2;
  string error = 3;
  int32 fail_count = 4;
  google.protobuf.Timestamp last_success = 5;
}

// Additional events for workers

// DrawdownAlert is published when user approaches drawdown limit
message DrawdownAlert {
  BaseEvent base = 1;
  string reason = 2;
  double current_drawdown = 3;
  double max_drawdown = 4;
  double percentage = 5;
  double daily_pnl = 6;
}

// ConsecutiveLossesAlert is published when user has multiple consecutive losses
message ConsecutiveLossesAlert {
  BaseEvent base = 1;
  int32 consecutive_losses = 2;
  int32 max_allowed = 3;
}

// PnLUpdatedEvent is published when user PnL is recalculated
message PnLUpdatedEvent {
  BaseEvent base = 1;
  double daily_pnl = 2;
  double daily_pnl_percent = 3;
  double total_pnl = 4;
  int32 trades_count = 5;
  int32 winning_trades = 6;
  int32 losing_trades = 7;
  double win_rate = 8;
}

// JournalEntryCreatedEvent is published when a journal entry is created
message JournalEntryCreatedEvent {
  BaseEvent base = 1;
  string entry_id = 2;
  string symbol = 3;
  string side = 4;
  double pnl = 5;
  double pnl_percent = 6;
  string lesson_learned = 7;
}

// DailyReportEvent is published with daily performance summary
message DailyReportEvent {
  BaseEvent base = 1;
  double daily_pnl = 2;
  double daily_pnl_percent = 3;
  int32 total_trades = 4;
  int32 winning_trades = 5;
  double win_rate = 6;
  double sharpe_ratio = 7;
  double max_drawdown = 8;
}

// StrategyDisabledEvent is published when a strategy is auto-disabled
message StrategyDisabledEvent {
  BaseEvent base = 1;
  string strategy_id = 2;
  string strategy_name = 3;
  string reason = 4;
  double win_rate = 5;
  double profit_factor = 6;
  int32 total_trades = 7;
}

// OrderCancelledEvent is published when an order is cancelled
message OrderCancelledEvent {
  BaseEvent base = 1;
  string order_id = 2;
  string symbol = 3;
  string exchange = 4;
  string reason = 5;
}

// PositionPnLUpdatedEvent is published when position PnL is updated
message PositionPnLUpdatedEvent {
  BaseEvent base = 1;
  string position_id = 2;
  string symbol = 3;
  double unrealized_pnl = 4;
  double unrealized_pnl_percent = 5;
  double current_price = 6;
  double entry_price = 7;
}

// SMC Pattern Events

// FVGDetectedEvent is published when Fair Value Gap is detected
message FVGDetectedEvent {
  BaseEvent base = 1;
  string symbol = 2;
  string type = 3;  // bullish, bearish
  double top_price = 4;
  double bottom_price = 5;
  double gap_percent = 6;
  bool filled = 7;
}

// OrderBlockDetectedEvent is published when Order Block is detected
message OrderBlockDetectedEvent {
  BaseEvent base = 1;
  string symbol = 2;
  string type = 3;  // bullish, bearish
  double top_price = 4;
  double bottom_price = 5;
  double strength = 6;
}

// MarketAnalysisRequestEvent is published when market scanner requests analysis
message MarketAnalysisRequestEvent {
  BaseEvent base = 1;
  string symbol = 2;
  string market_type = 3;  // spot, futures
  string strategy = 4;
}

// MarketScanCompleteEvent is published when market scanner completes a scan
message MarketScanCompleteEvent {
  BaseEvent base = 1;
  int32 total_users = 2;
  int32 errors_count = 3;
  int64 duration_ms = 4;
}

// WhaleAlertEvent is published when a large trade is detected
message WhaleAlertEvent {
  BaseEvent base = 1;
  string exchange = 2;
  string symbol = 3;
  string trade_id = 4;
  double price = 5;
  double quantity = 6;
  double value_usd = 7;
  string side = 8;  // buy, sell
  string sentiment = 9;  // bullish, bearish
}

// LiquidationAlertEvent is published when a large liquidation occurs
message LiquidationAlertEvent {
  BaseEvent base = 1;
  string exchange = 2;
  string symbol = 3;
  string side = 4;  // long, short
  double price = 5;
  double quantity = 6;
  double value_usd = 7;
}

// StrategyWarningEvent is published when strategy performance is concerning
message StrategyWarningEvent {
  BaseEvent base = 1;
  string strategy_id = 2;
  string strategy_name = 3;
  string reason = 4;
  double win_rate = 5;
  double profit_factor = 6;
  int32 total_trades = 7;
}

